samples/_failures_safe/1761661862_daa078_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_790dc566.c: In function ‘main’:
./samples/SAFE/__tmp_790dc566.c:138:12: error: missing terminating " character
  138 |     printf("Decompression successful
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_790dc566.c:138:5: error: expected expression at end of input
  138 |     printf("Decompression successful
      |     ^~~~~~
./samples/SAFE/__tmp_790dc566.c:138:5: error: expected declaration or statement at end of input
